--- a/src/Card.css
+++ b/src/Card.css
@@ -18,3 +18,50 @@
     width: 100%;
     box-sizing: border-box;
 }
+.checkbox-container {
+    display: inline-block;
+    position: relative;
+    width: 1.25em;
+    height: 1.25em;
+    margin-right: 1rem;
+}
+
+.checkbox {
+    display: none;
+}
+
+.custom-checkbox {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 1em;
+    height: 1em;
+    background-color: white;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+}
+
+.custom-checkbox:after {
+    content: "";
+    position: absolute;
+    display: none;
+}
+
+.checkbox-container input:checked ~ .custom-checkbox:after {
+    display: block;
+}
+
+.custom-checkbox:after {
+    left: 0.3em;
+    top: 0.08em;
+    width: 0.24em;
+    height: 0.6em;
+    border: solid white;
+    border-width: 0 0.125em 0.125em 0;
+    transform: rotate(45deg);
+}
+
+.checkbox-container input:checked ~ .custom-checkbox {
+    background-color: #7C72A2;
+    background-color: #7C72A2;
+}
