--- a/src/TaskScreen.css
+++ b/src/TaskScreen.css
@@ -9,14 +9,19 @@
     max-width: 100%;
     background-color: #74ABB7;
 }
+#thinLine{
+    min-width: 100%;
+    height: .075em;
+    background-color: whitesmoke;
+    margin-bottom: 4em;
+}
 #topDiv {
     display: flex;
     align-items: center;
     flex-wrap: wrap;
     justify-content: space-between;
-    background-color: #f1f1f1;
+    background-color: #74ABB7;
     padding: var(--topDiv-padding);
-    margin-bottom: 4em;
 }
 
 #leftSide {
@@ -29,12 +34,14 @@
     background-color: transparent;
     font-size: var(--backButton-font-size);
     cursor: pointer;
+    color: whitesmoke;
 }
 
 #tasksText {
     margin-left: 0.5rem;
     font-size: var(--tasksText-font-size);
     text-align: left;
+    color: whitesmoke;
 }
 #otherStuff{
     max-width: 30em;
@@ -50,6 +57,7 @@
     font-weight: bold;
     flex: 1;
     text-align: center;
+    color: whitesmoke;
 }
 
 /* Responsive design */
