--- a/src/DialogBox.css
+++ b/src/DialogBox.css
@@ -1,4 +1,11 @@
 /* DialogBox.css */
+input,
+textarea,
+button,
+select,
+a {
+    -webkit-tap-highlight-color: transparent;
+}
 .dialog-overlay {
     position: fixed;
     top: 0;
@@ -9,6 +16,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    z-index: 10;
+    outline: none;
 }
 
 .dialog-box {
@@ -23,6 +32,7 @@
     display: flex;
     justify-content: space-between;
     margin: 1rem 0;
+    outline: none;
 }
 
 .rating-button {
@@ -31,6 +41,7 @@
     border-radius: 50%;
     border: none;
     cursor: pointer;
+    outline: none;
 }
 
 .rating-button.selected {
